# dj-to-do

./: .pre-commit-config.yaml  README.md
backend/: README.md  pyproject.toml  setup.cfg
backend/base/: admin.py  apps.py  models.py  urls.py  views.py
backend/base/migrations/: 0001_initial.py
backend/base/templates/base/: task_confirm_delete.html  task_form.html  task_list.html
backend/todo_list/: settings.py  urls.py  wsgi.py
backend/todo_list/todo_list/: asgi.py  settings.py  urls.py
